// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaRegisterApi integration test 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02ArtifactHash1EB2E2CD": Object {
      "Description": "Artifact hash for asset \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3Bucket34D7E295": Object {
      "Description": "S3 bucket for asset \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E": Object {
      "Description": "S3 key for asset version \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018ArtifactHash1DC44F50": Object {
      "Description": "Artifact hash for asset \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3Bucket08075D5C": Object {
      "Description": "S3 bucket for asset \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098": Object {
      "Description": "S3 key for asset version \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bArtifactHash03CFB4A1": Object {
      "Description": "Artifact hash for asset \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3Bucket7BD14D68": Object {
      "Description": "S3 bucket for asset \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA": Object {
      "Description": "S3 key for asset version \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "JustInTimeRegistrationtestcaseCaRegistratortestcase40DBE3A2": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3Bucket34D7E295",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "DEIVCE_ACTIVATOR_QUEUE_URL": Object {
              "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            },
            "DEIVCE_ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                "Arn",
              ],
            },
            "VERIFIERS": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "[\\"",
                  Object {
                    "Fn::ImportValue": "verifier-stack:ExportsOutputReftestcase9BC7DE4DD4B50F74",
                  },
                  "\\"]",
                ],
              ],
            },
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:RegisterCACertificate",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3Bucket7BD14D68",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iot:DescribeCertificate",
                "iot:CreateThing",
                "iot:CreatePolicy",
                "iot:AttachPolicy",
                "iot:AttachThingPrincipal",
                "iot:UpdateCertificate",
                "lambda:InvokeFunction",
                "lambda:InvokeAsync",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseSqsEventSourceteststackJustInTimeRegistrationtestcaseReviewReceptortestcase3523F08BEF2BA3A9": Object {
      "Properties": Object {
        "BatchSize": 1,
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "ReviewAcceptionRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseTopicRuletestcaseB619B96E": Object {
      "Properties": Object {
        "TopicRulePayload": Object {
          "Actions": Array [
            Object {
              "Sqs": Object {
                "QueueUrl": Object {
                  "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                },
                "RoleArn": Object {
                  "Fn::GetAtt": Array [
                    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Sql": "SELECT * FROM '$aws/events/certificates/registered/#'",
        },
      },
      "Type": "AWS::IoT::TopicRule",
    },
    "JustInTimeRegistrationtestcaseVerifiersFetchertestcase4F2CFBBA": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3Bucket08075D5C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "VERIFIERS": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "[\\"",
                  Object {
                    "Fn::ImportValue": "verifier-stack:ExportsOutputReftestcase9BC7DE4DD4B50F74",
                  },
                  "\\"]",
                ],
              ],
            },
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`CaRegisterApi integration test with no verifiers provided 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02ArtifactHash1EB2E2CD": Object {
      "Description": "Artifact hash for asset \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3Bucket34D7E295": Object {
      "Description": "S3 bucket for asset \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E": Object {
      "Description": "S3 key for asset version \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018ArtifactHash1DC44F50": Object {
      "Description": "Artifact hash for asset \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3Bucket08075D5C": Object {
      "Description": "S3 bucket for asset \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098": Object {
      "Description": "S3 key for asset version \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bArtifactHash03CFB4A1": Object {
      "Description": "Artifact hash for asset \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3Bucket7BD14D68": Object {
      "Description": "S3 bucket for asset \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA": Object {
      "Description": "S3 key for asset version \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "JustInTimeRegistrationtestcaseCaRegistratortestcase40DBE3A2": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3Bucket34D7E295",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "DEIVCE_ACTIVATOR_QUEUE_URL": Object {
              "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            },
            "DEIVCE_ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                "Arn",
              ],
            },
            "VERIFIERS": "\\"[]\\"",
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:RegisterCACertificate",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3Bucket7BD14D68",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iot:DescribeCertificate",
                "iot:CreateThing",
                "iot:CreatePolicy",
                "iot:AttachPolicy",
                "iot:AttachThingPrincipal",
                "iot:UpdateCertificate",
                "lambda:InvokeFunction",
                "lambda:InvokeAsync",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseSqsEventSourceteststackJustInTimeRegistrationtestcaseReviewReceptortestcase3523F08BEF2BA3A9": Object {
      "Properties": Object {
        "BatchSize": 1,
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "ReviewAcceptionRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseTopicRuletestcaseB619B96E": Object {
      "Properties": Object {
        "TopicRulePayload": Object {
          "Actions": Array [
            Object {
              "Sqs": Object {
                "QueueUrl": Object {
                  "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                },
                "RoleArn": Object {
                  "Fn::GetAtt": Array [
                    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Sql": "SELECT * FROM '$aws/events/certificates/registered/#'",
        },
      },
      "Type": "AWS::IoT::TopicRule",
    },
    "JustInTimeRegistrationtestcaseVerifiersFetchertestcase4F2CFBBA": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3Bucket08075D5C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "VERIFIERS": "\\"[]\\"",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`CaRegisterApi integration test without providing verifiers and prefix 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02ArtifactHash1EB2E2CD": Object {
      "Description": "Artifact hash for asset \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3Bucket34D7E295": Object {
      "Description": "S3 bucket for asset \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E": Object {
      "Description": "S3 key for asset version \\"250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018ArtifactHash1DC44F50": Object {
      "Description": "Artifact hash for asset \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3Bucket08075D5C": Object {
      "Description": "S3 bucket for asset \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098": Object {
      "Description": "S3 key for asset version \\"887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bArtifactHash03CFB4A1": Object {
      "Description": "Artifact hash for asset \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3Bucket7BD14D68": Object {
      "Description": "S3 bucket for asset \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
    "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA": Object {
      "Description": "S3 key for asset version \\"c77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8b\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "JustInTimeRegistrationtestcaseCaRegistratortestcase40DBE3A2": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3Bucket34D7E295",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters250bdee7f663c6e287772e746d4a15b1fc1a858b3a5224d4536404f2eaf29f02S3VersionKeyEEB2925E",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "",
            "DEIVCE_ACTIVATOR_QUEUE_URL": Object {
              "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            },
            "DEIVCE_ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                "Arn",
              ],
            },
            "VERIFIERS": "\\"[]\\"",
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:RegisterCACertificate",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseDE8814EE",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRoleDefaultPolicy816F422E",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseCaRegistratortestcaseServiceRole8F8171C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3Bucket7BD14D68",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc77a9ec8292c8f480b1989e2a8868ead714e0e301d5d4b2bad469d60f0253f8bS3VersionKeyBA0804DA",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iot:DescribeCertificate",
                "iot:CreateThing",
                "iot:CreatePolicy",
                "iot:AttachPolicy",
                "iot:AttachThingPrincipal",
                "iot:UpdateCertificate",
                "lambda:InvokeFunction",
                "lambda:InvokeAsync",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcasePolicyDeviceActivatortestcaseE698297C",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleDefaultPolicyD0151B2D",
        "Roles": Array [
          Object {
            "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseServiceRoleCD94255D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "JustInTimeRegistrationtestcaseDeviceActivatortestcaseSqsEventSourceteststackJustInTimeRegistrationtestcaseReviewReceptortestcase3523F08BEF2BA3A9": Object {
      "Properties": Object {
        "BatchSize": 1,
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "JustInTimeRegistrationtestcaseDeviceActivatortestcaseBE99699A",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "ReviewAcceptionRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "JustInTimeRegistrationtestcaseReviewReceptortestcaseTopicRuletestcaseB619B96E": Object {
      "Properties": Object {
        "TopicRulePayload": Object {
          "Actions": Array [
            Object {
              "Sqs": Object {
                "QueueUrl": Object {
                  "Ref": "JustInTimeRegistrationtestcaseReviewReceptortestcaseAB8D5DFE",
                },
                "RoleArn": Object {
                  "Fn::GetAtt": Array [
                    "JustInTimeRegistrationtestcaseReviewReceptortestcaseReviewAcceptionRoletestcaseA3AF3CD4",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Sql": "SELECT * FROM '$aws/events/certificates/registered/#'",
        },
      },
      "Type": "AWS::IoT::TopicRule",
    },
    "JustInTimeRegistrationtestcaseVerifiersFetchertestcase4F2CFBBA": Object {
      "DependsOn": Array [
        "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3Bucket08075D5C",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters887475b77c5922810aa289cfaa72da3394151abf61b6408a27632a1a4dba8018S3VersionKey044C0098",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "VERIFIERS": "\\"[]\\"",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "JustInTimeRegistrationtestcaseVerifiersFetchertestcaseServiceRoleFE2AC6E2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
